[gd_scene load_steps=7 format=4 uid="uid://r74xyqrn8wh1"]

[ext_resource type="Script" uid="uid://cqe3r2lvkup6u" path="res://scene/combat_scene/combat_scene.gd" id="1_slbg2"]
[ext_resource type="PackedScene" uid="uid://c0cf0riae7ynt" path="res://ui/battle_ui/battle_ui.tscn" id="2_4s34v"]
[ext_resource type="TileSet" uid="uid://ciepg58tx8ih" path="res://tile/dungeon.tres" id="3_wple6"]
[ext_resource type="PackedScene" uid="uid://8cyrfxkufpsq" path="res://manager/combat_manager/combat_manager.tscn" id="5_slbg2"]
[ext_resource type="PackedScene" uid="uid://be4308m1xxk4o" path="res://scene/combat_scene/slot/team.tscn" id="6_4s34v"]
[ext_resource type="Script" uid="uid://b6whsoyr1pxpy" path="res://character/enemy/enemy_resource.gd" id="6_wple6"]

[node name="CombatScene" type="Node2D"]
script = ExtResource("1_slbg2")

[node name="BattleUi" parent="." instance=ExtResource("2_4s34v")]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-3, 2)
tile_map_data = PackedByteArray("AAD6//r/AwACAAEAAAD6//v/AwACAAEAAAD6//z/AwACAAEAAAD6//3/AwACAAEAAAD6//7/AwACAAEAAAD6////AwACAAEAAAD6/wAAAwACAAEAAAD6/wEAAwACAAEAAAD6/wIAAwACAAEAAAD6/wMAAwACAAEAAAD6/wQAAwACAAEAAAD6/wUAAwACAAEAAAD6/wYAAwACAAEAAAD6/wcAAwACAAEAAAD6/wgAAwACAAEAAAD6/wkAAwACAAEAAAD6/woAAwACAAEAAAD6/wsAAwACAAEAAAD6/wwAAwACAAEAAAD6/w0AAwACAAEAAAD6/w4AAwACAAEAAAD6/w8AAwACAAEAAAD7//r/AwACAAEAAAD7//v/AwACAAEAAAD7//z/AwACAAEAAAD7//3/AwACAAEAAAD7//7/AwACAAEAAAD7////AwACAAEAAAD7/wAAAwACAAEAAAD7/wEAAwACAAEAAAD7/wIAAwACAAEAAAD7/wMAAwACAAEAAAD7/wQAAwACAAEAAAD7/wUAAwACAAEAAAD7/wYAAwACAAEAAAD7/wcAAwACAAEAAAD7/wgAAwACAAEAAAD7/wkAAwACAAEAAAD7/woAAwACAAEAAAD7/wsAAwACAAEAAAD7/wwAAwACAAEAAAD7/w0AAwACAAEAAAD7/w4AAwACAAEAAAD7/w8AAwACAAEAAAD8//r/AwACAAEAAAD8//v/AwACAAEAAAD8//z/AwACAAEAAAD8//3/AwACAAEAAAD8//7/AwACAAEAAAD8////AwACAAEAAAD8/wAAAwACAAEAAAD8/wEAAwACAAEAAAD8/wIAAwACAAEAAAD8/wMAAwACAAEAAAD8/wQAAwACAAEAAAD8/wUAAwACAAEAAAD8/wYAAwACAAEAAAD8/wcAAwACAAEAAAD8/wgAAwACAAEAAAD8/wkAAwACAAEAAAD8/woAAwACAAEAAAD8/wsAAwACAAEAAAD8/wwAAwACAAEAAAD8/w0AAwACAAEAAAD8/w4AAwACAAEAAAD8/w8AAwACAAEAAAD9//r/AwACAAEAAAD9//v/AwACAAEAAAD9//z/AwACAAEAAAD9//3/AwACAAEAAAD9//7/AwACAAEAAAD9////AwACAAEAAAD9/wAAAwACAAEAAAD9/wEAAwACAAEAAAD9/wIAAwACAAEAAAD9/wMAAwACAAEAAAD9/wQAAwACAAEAAAD9/wUAAwACAAEAAAD9/wYAAwACAAEAAAD9/wcAAwACAAEAAAD9/wgAAwACAAEAAAD9/wkAAwACAAEAAAD9/woAAwACAAEAAAD9/wsAAwACAAEAAAD9/wwAAwACAAEAAAD9/w0AAwACAAEAAAD9/w4AAwACAAEAAAD9/w8AAwACAAEAAAD+//r/AwACAAEAAAD+//v/AwACAAEAAAD+//z/AwACAAEAAAD+//3/AwACAAEAAAD+//7/AwACAAEAAAD+////AwACAAEAAAD+/wAAAwACAAEAAAD+/wEAAwACAAEAAAD+/wIAAwACAAEAAAD+/wMAAwACAAEAAAD+/wQAAwACAAEAAAD+/wUAAwACAAEAAAD+/wYAAwACAAEAAAD+/wcAAwACAAEAAAD+/wgAAwACAAEAAAD+/wkAAwACAAEAAAD+/woAAwACAAEAAAD+/wsAAwACAAEAAAD+/wwAAwACAAEAAAD+/w0AAwACAAEAAAD+/w4AAwACAAEAAAD+/w8AAwACAAEAAAD///r/AwACAAEAAAD///v/AwACAAEAAAD///z/AwACAAEAAAD///3/AwACAAEAAAD///7/AwACAAEAAAD/////AwACAAEAAAD//wAAAwACAAEAAAD//wEAAwACAAEAAAD//wIAAwACAAEAAAD//wMAAwACAAEAAAD//wQAAwACAAEAAAD//wUAAwACAAEAAAD//wYAAwACAAEAAAD//wcAAwACAAEAAAD//wgAAwACAAEAAAD//wkAAwACAAEAAAD//woAAwACAAEAAAD//wsAAwACAAEAAAD//wwAAwACAAEAAAD//w0AAwACAAEAAAD//w4AAwACAAEAAAD//w8AAwACAAEAAAAAAPr/AwACAAEAAAAAAPv/AwACAAEAAAAAAPz/AwACAAEAAAAAAP3/AwACAAEAAAAAAP7/AwACAAEAAAAAAP//AwACAAEAAAAAAAAAAwACAAEAAAAAAAEAAwACAAEAAAAAAAIAAwACAAEAAAAAAAMAAwACAAEAAAAAAAQAAwACAAEAAAAAAAUAAwACAAEAAAAAAAYAAwACAAEAAAAAAAcAAwACAAEAAAAAAAgAAwACAAEAAAAAAAkAAwACAAEAAAAAAAoAAwACAAEAAAAAAAsAAwACAAEAAAAAAAwAAwACAAEAAAAAAA0AAwACAAEAAAAAAA4AAwACAAEAAAAAAA8AAwACAAEAAAABAPr/AwACAAEAAAABAPv/AwACAAEAAAABAPz/AwACAAEAAAABAP3/AwACAAEAAAABAP7/AwACAAEAAAABAP//AwACAAEAAAABAAAAAwACAAEAAAABAAEAAwACAAEAAAABAAIAAwACAAEAAAABAAMAAwACAAEAAAABAAQAAwACAAEAAAABAAUAAwACAAEAAAABAAYAAwACAAEAAAABAAcAAwACAAEAAAABAAgAAwACAAEAAAABAAkAAwACAAEAAAABAAoAAwACAAEAAAABAAsAAwACAAEAAAABAAwAAwACAAEAAAABAA0AAwACAAEAAAABAA4AAwACAAEAAAABAA8AAwACAAEAAAACAPr/AwACAAEAAAACAPv/AwACAAEAAAACAPz/AwACAAEAAAACAP3/AwACAAEAAAACAP7/AwACAAEAAAACAP//AwACAAEAAAACAAAAAwACAAEAAAACAAEAAwACAAEAAAACAAIAAwACAAEAAAACAAMAAwACAAEAAAACAAQAAwACAAEAAAACAAUAAwACAAEAAAACAAYAAwACAAEAAAACAAcAAwACAAEAAAACAAgAAwACAAEAAAACAAkAAwACAAEAAAACAAoAAwACAAEAAAACAAsAAwACAAEAAAACAAwAAwACAAEAAAACAA0AAwACAAEAAAACAA4AAwACAAEAAAACAA8AAwACAAEAAAADAPr/AwACAAEAAAADAPv/AwACAAEAAAADAPz/AwACAAEAAAADAP3/AwACAAEAAAADAP7/AwACAAEAAAADAP//AwACAAEAAAADAAAAAwACAAEAAAADAAEAAwACAAEAAAADAAIAAwACAAEAAAADAAMAAwACAAEAAAADAAQAAwACAAEAAAADAAUAAwACAAEAAAADAAYAAwACAAEAAAADAAcAAwACAAEAAAADAAgAAwACAAEAAAADAAkAAwACAAEAAAADAAoAAwACAAEAAAADAAsAAwACAAEAAAADAAwAAwACAAEAAAADAA0AAwACAAEAAAADAA4AAwACAAEAAAADAA8AAwACAAEAAAAEAPr/AwACAAEAAAAEAPv/AwACAAEAAAAEAPz/AwACAAEAAAAEAP3/AwACAAEAAAAEAP7/AwACAAEAAAAEAP//AwACAAEAAAAEAAAAAwACAAEAAAAEAAEAAwACAAEAAAAEAAIAAwACAAEAAAAEAAMAAwACAAEAAAAEAAQAAwACAAEAAAAEAAUAAwACAAEAAAAEAAYAAwACAAEAAAAEAAcAAwACAAEAAAAEAAgAAwACAAEAAAAEAAkAAwACAAEAAAAEAAoAAwACAAEAAAAEAAsAAwACAAEAAAAEAAwAAwACAAEAAAAEAA0AAwACAAEAAAAEAA4AAwACAAEAAAAEAA8AAwACAAEAAAAFAPr/AwACAAEAAAAFAPv/AwACAAEAAAAFAPz/AwACAAEAAAAFAP3/AwACAAEAAAAFAP7/AwACAAEAAAAFAP//AwACAAEAAAAFAAAAAwACAAEAAAAFAAEAAwACAAEAAAAFAAIAAwACAAEAAAAFAAMAAwACAAEAAAAFAAQAAwACAAEAAAAFAAUAAwACAAEAAAAFAAYAAwACAAEAAAAFAAcAAwACAAEAAAAFAAgAAwACAAEAAAAFAAkAAwACAAEAAAAFAAoAAwACAAEAAAAFAAsAAwACAAEAAAAFAAwAAwACAAEAAAAFAA0AAwACAAEAAAAFAA4AAwACAAEAAAAFAA8AAwACAAEAAAAGAPr/AwACAAEAAAAGAPv/AwACAAEAAAAGAPz/AwACAAEAAAAGAP3/AwACAAEAAAAGAP7/AwACAAEAAAAGAP//AwACAAEAAAAGAAAAAwACAAEAAAAGAAEAAwACAAEAAAAGAAIAAwACAAEAAAAGAAMAAwACAAEAAAAGAAQAAwACAAEAAAAGAAUAAwACAAEAAAAGAAYAAwACAAEAAAAGAAcAAwACAAEAAAAGAAgAAwACAAEAAAAGAAkAAwACAAEAAAAGAAoAAwACAAEAAAAGAAsAAwACAAEAAAAGAAwAAwACAAEAAAAGAA0AAwACAAEAAAAGAA4AAwACAAEAAAAGAA8AAwACAAEAAAAHAPr/AwACAAEAAAAHAPv/AwACAAEAAAAHAPz/AwACAAEAAAAHAP3/AwACAAEAAAAHAP7/AwACAAEAAAAHAP//AwACAAEAAAAHAAAAAwACAAEAAAAHAAEAAwACAAEAAAAHAAIAAwACAAEAAAAHAAMAAwACAAEAAAAHAAQAAwACAAEAAAAHAAUAAwACAAEAAAAHAAYAAwACAAEAAAAHAAcAAwACAAEAAAAHAAgAAwACAAEAAAAHAAkAAwACAAEAAAAHAAoAAwACAAEAAAAHAAsAAwACAAEAAAAHAAwAAwACAAEAAAAHAA0AAwACAAEAAAAHAA4AAwACAAEAAAAHAA8AAwACAAEAAAAIAPr/AwACAAEAAAAIAPv/AwACAAEAAAAIAPz/AwACAAEAAAAIAP3/AwACAAEAAAAIAP7/AwACAAEAAAAIAP//AwACAAEAAAAIAAAAAwACAAEAAAAIAAEAAwACAAEAAAAIAAIAAwACAAEAAAAIAAMAAwACAAEAAAAIAAQAAwACAAEAAAAIAAUAAwACAAEAAAAIAAYAAwACAAEAAAAIAAcAAwACAAEAAAAIAAgAAwACAAEAAAAIAAkAAwACAAEAAAAIAAoAAwACAAEAAAAIAAsAAwACAAEAAAAIAAwAAwACAAEAAAAIAA0AAwACAAEAAAAIAA4AAwACAAEAAAAIAA8AAwACAAEAAAAJAPr/AwACAAEAAAAJAPv/AwACAAEAAAAJAPz/AwACAAEAAAAJAP3/AwACAAEAAAAJAP7/AwACAAEAAAAJAP//AwACAAEAAAAJAAAAAwACAAEAAAAJAAEAAwACAAEAAAAJAAIAAwACAAEAAAAJAAMAAwACAAEAAAAJAAQAAwACAAEAAAAJAAUAAwACAAEAAAAJAAYAAwACAAEAAAAJAAcAAwACAAEAAAAJAAgAAwACAAEAAAAJAAkAAwACAAEAAAAJAAoAAwACAAEAAAAJAAsAAwACAAEAAAAJAAwAAwACAAEAAAAJAA0AAwACAAEAAAAJAA4AAwACAAEAAAAJAA8AAwACAAEAAAAKAPr/AwACAAEAAAAKAPv/AwACAAEAAAAKAPz/AwACAAEAAAAKAP3/AwACAAEAAAAKAP7/AwACAAEAAAAKAP//AwACAAEAAAAKAAAAAwACAAEAAAAKAAEAAwACAAEAAAAKAAIAAwACAAEAAAAKAAMAAwACAAEAAAAKAAQAAwACAAEAAAAKAAUAAwACAAEAAAAKAAYAAwACAAEAAAAKAAcAAwACAAEAAAAKAAgAAwACAAEAAAAKAAkAAwACAAEAAAAKAAoAAwACAAEAAAAKAAsAAwACAAEAAAAKAAwAAwACAAEAAAAKAA0AAwACAAEAAAAKAA4AAwACAAEAAAAKAA8AAwACAAEAAAALAPr/AwACAAEAAAALAPv/AwACAAEAAAALAPz/AwACAAEAAAALAP3/AwACAAEAAAALAP7/AwACAAEAAAALAP//AwACAAEAAAALAAAAAwACAAEAAAALAAEAAwACAAEAAAALAAIAAwACAAEAAAALAAMAAwACAAEAAAALAAQAAwACAAEAAAALAAUAAwACAAEAAAALAAYAAwACAAEAAAALAAcAAwACAAEAAAALAAgAAwACAAEAAAALAAkAAwACAAEAAAALAAoAAwACAAEAAAALAAsAAwACAAEAAAALAAwAAwACAAEAAAALAA0AAwACAAEAAAALAA4AAwACAAEAAAALAA8AAwACAAEAAAAMAPr/AwACAAEAAAAMAPv/AwACAAEAAAAMAPz/AwACAAEAAAAMAP3/AwACAAEAAAAMAP7/AwACAAEAAAAMAP//AwACAAEAAAAMAAAAAwACAAEAAAAMAAEAAwACAAEAAAAMAAIAAwACAAEAAAAMAAMAAwACAAEAAAAMAAQAAwACAAEAAAAMAAUAAwACAAEAAAAMAAYAAwACAAEAAAAMAAcAAwACAAEAAAAMAAgAAwACAAEAAAAMAAkAAwACAAEAAAAMAAoAAwACAAEAAAAMAAsAAwACAAEAAAAMAAwAAwACAAEAAAAMAA0AAwACAAEAAAAMAA4AAwACAAEAAAAMAA8AAwACAAEAAAANAPr/AwACAAEAAAANAPv/AwACAAEAAAANAPz/AwACAAEAAAANAP3/AwACAAEAAAANAP7/AwACAAEAAAANAP//AwACAAEAAAANAAAAAwACAAEAAAANAAEAAwACAAEAAAANAAIAAwACAAEAAAANAAMAAwACAAEAAAANAAQAAwACAAEAAAANAAUAAwACAAEAAAANAAYAAwACAAEAAAANAAcAAwACAAEAAAANAAgAAwACAAEAAAANAAkAAwACAAEAAAANAAoAAwACAAEAAAANAAsAAwACAAEAAAANAAwAAwACAAEAAAANAA0AAwACAAEAAAANAA4AAwACAAEAAAANAA8AAwACAAEAAAAOAPr/AwACAAEAAAAOAPv/AwACAAEAAAAOAPz/AwACAAEAAAAOAP3/AwACAAEAAAAOAP7/AwACAAEAAAAOAP//AwACAAEAAAAOAAAAAwACAAEAAAAOAAEAAwACAAEAAAAOAAIAAwACAAEAAAAOAAMAAwACAAEAAAAOAAQAAwACAAEAAAAOAAUAAwACAAEAAAAOAAYAAwACAAEAAAAOAAcAAwACAAEAAAAOAAgAAwACAAEAAAAOAAkAAwACAAEAAAAOAAoAAwACAAEAAAAOAAsAAwACAAEAAAAOAAwAAwACAAEAAAAOAA0AAwACAAEAAAAOAA4AAwACAAEAAAAOAA8AAwACAAEAAAAPAPr/AwACAAEAAAAPAPv/AwACAAEAAAAPAPz/AwACAAEAAAAPAP3/AwACAAEAAAAPAP7/AwACAAEAAAAPAP//AwACAAEAAAAPAAAAAwACAAEAAAAPAAEAAwACAAEAAAAPAAIAAwACAAEAAAAPAAMAAwACAAEAAAAPAAQAAwACAAEAAAAPAAUAAwACAAEAAAAPAAYAAwACAAEAAAAPAAcAAwACAAEAAAAPAAgAAwACAAEAAAAPAAkAAwACAAEAAAAPAAoAAwACAAEAAAAPAAsAAwACAAEAAAAPAAwAAwACAAEAAAAPAA0AAwACAAEAAAAPAA4AAwACAAEAAAAPAA8AAwACAAEAAAAQAPr/AwACAAEAAAAQAPv/AwACAAEAAAAQAPz/AwACAAEAAAAQAP3/AwACAAEAAAAQAP7/AwACAAEAAAAQAP//AwACAAEAAAAQAAAAAwACAAEAAAAQAAEAAwACAAEAAAAQAAIAAwACAAEAAAAQAAMAAwACAAEAAAAQAAQAAwACAAEAAAAQAAUAAwACAAEAAAAQAAYAAwACAAEAAAAQAAcAAwACAAEAAAAQAAgAAwACAAEAAAAQAAkAAwACAAEAAAAQAAoAAwACAAEAAAAQAAsAAwACAAEAAAAQAAwAAwACAAEAAAAQAA0AAwACAAEAAAAQAA4AAwACAAEAAAAQAA8AAwACAAEAAAARAPr/AwACAAEAAAARAPv/AwACAAEAAAARAPz/AwACAAEAAAARAP3/AwACAAEAAAARAP7/AwACAAEAAAARAP//AwACAAEAAAARAAAAAwACAAEAAAARAAEAAwACAAEAAAARAAIAAwACAAEAAAARAAMAAwACAAEAAAARAAQAAwACAAEAAAARAAUAAwACAAEAAAARAAYAAwACAAEAAAARAAcAAwACAAEAAAARAAgAAwACAAEAAAARAAkAAwACAAEAAAARAAoAAwACAAEAAAARAAsAAwACAAEAAAARAAwAAwACAAEAAAARAA0AAwACAAEAAAARAA4AAwACAAEAAAARAA8AAwACAAEAAAASAPr/AwACAAEAAAASAPv/AwACAAEAAAASAPz/AwACAAEAAAASAP3/AwACAAEAAAASAP7/AwACAAEAAAASAP//AwACAAEAAAASAAAAAwACAAEAAAASAAEAAwACAAEAAAASAAIAAwACAAEAAAASAAMAAwACAAEAAAASAAQAAwACAAEAAAASAAUAAwACAAEAAAASAAYAAwACAAEAAAASAAcAAwACAAEAAAASAAgAAwACAAEAAAASAAkAAwACAAEAAAASAAoAAwACAAEAAAASAAsAAwACAAEAAAASAAwAAwACAAEAAAASAA0AAwACAAEAAAASAA4AAwACAAEAAAASAA8AAwACAAEAAAATAPr/AwACAAEAAAATAPv/AwACAAEAAAATAPz/AwACAAEAAAATAP3/AwACAAEAAAATAP7/AwACAAEAAAATAP//AwACAAEAAAATAAAAAwACAAEAAAATAAEAAwACAAEAAAATAAIAAwACAAEAAAATAAMAAwACAAEAAAATAAQAAwACAAEAAAATAAUAAwACAAEAAAATAAYAAwACAAEAAAATAAcAAwACAAEAAAATAAgAAwACAAEAAAATAAkAAwACAAEAAAATAAoAAwACAAEAAAATAAsAAwACAAEAAAATAAwAAwACAAEAAAATAA0AAwACAAEAAAATAA4AAwACAAEAAAATAA8AAwACAAEAAAAUAPr/AwACAAEAAAAUAPv/AwACAAEAAAAUAPz/AwACAAEAAAAUAP3/AwACAAEAAAAUAP7/AwACAAEAAAAUAP//AwACAAEAAAAUAAAAAwACAAEAAAAUAAEAAwACAAEAAAAUAAIAAwACAAEAAAAUAAMAAwACAAEAAAAUAAQAAwACAAEAAAAUAAUAAwACAAEAAAAUAAYAAwACAAEAAAAUAAcAAwACAAEAAAAUAAgAAwACAAEAAAAUAAkAAwACAAEAAAAUAAoAAwACAAEAAAAUAAsAAwACAAEAAAAUAAwAAwACAAEAAAAUAA0AAwACAAEAAAAUAA4AAwACAAEAAAAUAA8AAwACAAEAAAAVAPr/AwACAAEAAAAVAPv/AwACAAEAAAAVAPz/AwACAAEAAAAVAP3/AwACAAEAAAAVAP7/AwACAAEAAAAVAP//AwACAAEAAAAVAAAAAwACAAEAAAAVAAEAAwACAAEAAAAVAAIAAwACAAEAAAAVAAMAAwACAAEAAAAVAAQAAwACAAEAAAAVAAUAAwACAAEAAAAVAAYAAwACAAEAAAAVAAcAAwACAAEAAAAVAAgAAwACAAEAAAAVAAkAAwACAAEAAAAVAAoAAwACAAEAAAAVAAsAAwACAAEAAAAVAAwAAwACAAEAAAAVAA0AAwACAAEAAAAVAA4AAwACAAEAAAAVAA8AAwACAAEAAAAWAPr/AwACAAEAAAAWAPv/AwACAAEAAAAWAPz/AwACAAEAAAAWAP3/AwACAAEAAAAWAP7/AwACAAEAAAAWAP//AwACAAEAAAAWAAAAAwACAAEAAAAWAAEAAwACAAEAAAAWAAIAAwACAAEAAAAWAAMAAwACAAEAAAAWAAQAAwACAAEAAAAWAAUAAwACAAEAAAAWAAYAAwACAAEAAAAWAAcAAwACAAEAAAAWAAgAAwACAAEAAAAWAAkAAwACAAEAAAAWAAoAAwACAAEAAAAWAAsAAwACAAEAAAAWAAwAAwACAAEAAAAWAA0AAwACAAEAAAAWAA4AAwACAAEAAAAWAA8AAwACAAEAAAAXAPr/AwACAAEAAAAXAPv/AwACAAEAAAAXAPz/AwACAAEAAAAXAP3/AwACAAEAAAAXAP7/AwACAAEAAAAXAP//AwACAAEAAAAXAAAAAwACAAEAAAAXAAEAAwACAAEAAAAXAAIAAwACAAEAAAAXAAMAAwACAAEAAAAXAAQAAwACAAEAAAAXAAUAAwACAAEAAAAXAAYAAwACAAEAAAAXAAcAAwACAAEAAAAXAAgAAwACAAEAAAAXAAkAAwACAAEAAAAXAAoAAwACAAEAAAAXAAsAAwACAAEAAAAXAAwAAwACAAEAAAAXAA0AAwACAAEAAAAXAA4AAwACAAEAAAAXAA8AAwACAAEAAAAYAPr/AwACAAEAAAAYAPv/AwACAAEAAAAYAPz/AwACAAEAAAAYAP3/AwACAAEAAAAYAP7/AwACAAEAAAAYAP//AwACAAEAAAAYAAAAAwACAAEAAAAYAAEAAwACAAEAAAAYAAIAAwACAAEAAAAYAAMAAwACAAEAAAAYAAQAAwACAAEAAAAYAAUAAwACAAEAAAAYAAYAAwACAAEAAAAYAAcAAwACAAEAAAAYAAgAAwACAAEAAAAYAAkAAwACAAEAAAAYAAoAAwACAAEAAAAYAAsAAwACAAEAAAAYAAwAAwACAAEAAAAYAA0AAwACAAEAAAAYAA4AAwACAAEAAAAYAA8AAwACAAEAAAAZAPr/AwACAAEAAAAZAPv/AwACAAEAAAAZAPz/AwACAAEAAAAZAP3/AwACAAEAAAAZAP7/AwACAAEAAAAZAP//AwACAAEAAAAZAAAAAwACAAEAAAAZAAEAAwACAAEAAAAZAAIAAwACAAEAAAAZAAMAAwACAAEAAAAZAAQAAwACAAEAAAAZAAUAAwACAAEAAAAZAAYAAwACAAEAAAAZAAcAAwACAAEAAAAZAAgAAwACAAEAAAAZAAkAAwACAAEAAAAZAAoAAwACAAEAAAAZAAsAAwACAAEAAAAZAAwAAwACAAEAAAAZAA0AAwACAAEAAAAZAA4AAwACAAEAAAAZAA8AAwACAAEAAAA=")
tile_set = ExtResource("3_wple6")

[node name="HeroTeam" parent="." instance=ExtResource("6_4s34v")]
unique_name_in_owner = true
position = Vector2(149, 125)
slot_definitions = {
Vector2(-48, -48): "back",
Vector2(-48, 48): "back",
Vector2(48, -48): "front",
Vector2(48, 48): "front"
}

[node name="EnemyTeam" parent="." instance=ExtResource("6_4s34v")]
unique_name_in_owner = true
position = Vector2(364, 125)
slot_definitions = {
Vector2(-48, -32): "front",
Vector2(-48, 0): "front",
Vector2(-48, 32): "front",
Vector2(48, -32): "back",
Vector2(48, 0): "back",
Vector2(48, 32): "back"
}

[node name="CombatManager" parent="." instance=ExtResource("5_slbg2")]
unique_name_in_owner = true
enemy_list = Array[ExtResource("6_wple6")]([])
